--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "jzonta/faker-restaurant": "^1.1",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
     },
